# lab

./: .cursorrules  .envrc  .gitignore  .pre-commit-config.yaml  .state_core  LICENSE  README.md  lab.code-workspace  mise.toml  pyproject.toml  qwq_context.txt  requirements.txt  setup.py
.config/ai/: base.yml
.config/backups/: venv-config-20250112.cfg  venv-requirements-20250112.txt
.config/consciousness/: pattern_network.py
.config/zsh/: .zshenv  .zshrc  deploy.zsh  zsh_init.zsh
.direnv/python-3.11/: pyvenv.cfg
.github/workflows/: auto-build.yml
backups/redundant/: ai_gateway_controller.py  health_monitor.py  local_ai_orchestrator.py  quantum_ai_gateway.py
backups/src/: advanced_local_ai_exploration.py  analyzers.py  launch_excavation.py  main.py  pattern_system.py  quantum_ai_gateway.py  setup.py  system.py
backups/tests/: __init__.py
config/: models.yml  system.yml  tools.yml
core/: system.py
core/battle/: engine.py  system.py
core/cli/: commands.py
core/config/: manager.py
core/integration/: orchestrator.py
docs/: AI_COORDINATION_RULES.md  COMPONENTS.md  CONFIG_LOCATIONS.md  DRY_RUN_VERIFICATION.md  ENVIRONMENT_CONFLICTS.md  IMPLEMENTATION_PLAN.md  INTEGRATION_STRATEGY.md  PARALLEL_EXECUTION.md  PATH_DEDUPLICATION.md  RADICAL_INTEGRATION.md  README.md  REFACTORING.md  RETROACTIVE_COVERAGE.md  SYNERGIES.md  SYSTEM_MAP.md  git-autobuilder.md
scripts/: cleanup_environment.sh  fix_env.sh  install.sh  install_zsh_config.sh  integration_analyzer.py  setup.sh  start.sh  state_tool.sh
src/: main.py
tests/: conftest.py  run_tests.py
(+177 files in other folders)
